RESOLVED FIXED95393
[chromium] setNeedsAnimate should not cause commitRequested to become true
https://bugs.webkit.org/show_bug.cgi?id=95393
Summary [chromium] setNeedsAnimate should not cause commitRequested to become true
Nat Duca
Reported 2012-08-29 15:45:52 PDT
[chromium] setNeedsAnimate should not cause commitRequested to become true
Attachments
Patch (9.65 KB, patch)
2012-08-29 15:51 PDT, Nat Duca
no flags
Patch for landing (9.61 KB, patch)
2012-08-29 16:11 PDT, Nat Duca
no flags
Nat Duca
Comment 1 2012-08-29 15:51:05 PDT
James Robinson
Comment 2 2012-08-29 15:56:50 PDT
Comment on attachment 161341 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=161341&action=review Cool > Source/WebKit/chromium/ChangeLog:12 > + (WTF): > + (CCLayerTreeHostTestSetNeedsAnimateShouldNotSetCommitRequested): > + (WTF::CCLayerTreeHostTestSetNeedsAnimateShouldNotSetCommitRequested::CCLayerTreeHostTestSetNeedsAnimateShouldNotSetCommitRequested): > + (WTF::TEST_F): can you kill the WTF::? i'd fix prepare-ChangeLog to not do this but it's perl :\
Nat Duca
Comment 3 2012-08-29 16:11:09 PDT
Created attachment 161347 [details] Patch for landing
John Bates
Comment 4 2012-08-29 16:32:19 PDT
nice. 1 frame down, 1 to go.
Nat Duca
Comment 5 2012-08-29 16:33:38 PDT
baby steps!
WebKit Review Bot
Comment 6 2012-08-29 22:02:58 PDT
Comment on attachment 161347 [details] Patch for landing Clearing flags on attachment: 161347 Committed r127099: <http://trac.webkit.org/changeset/127099>
WebKit Review Bot
Comment 7 2012-08-29 22:03:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.